--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
    <h2>My First Exercise</h2>
    <p> This is the content paragraph </p>
    <nav>
-    <ul>
+    <ol>
       <li><a href="./public/Q1_1stGraded.html"> First Exercise </a> </li>
-    </ul>
+      <li><a href="./public/Q1_1NGMgValdriz.html"> First Non-Graded Exercise </a> </li>
    </nav>
   </section>
   <script src="script.js">
