--- a/public/Q1_1NGMgValdriz.html
+++ b/public/Q1_1NGMgValdriz.html
@@ -1,9 +1,9 @@
 <script>
     let age = 13;
     let maxAge = 80;
-    let numPerDay = 90;
+    let numPerDay = 3;
   
     totalRequired = (numPerDay * 365) * (maxAge - age);
-    document.write("You will need " + totalRequired + " to last you until the ripe old age of " + maxAge + ".");
+    document.write("You will need " + totalRequired + " Hi-Ho to last you until the ripe old age of " + maxAge + ".");
 
 </script>
