--- a/public/Q1_1NGMgValdrizInput.html
+++ b/public/Q1_1NGMgValdrizInput.html
@@ -1,3 +1,5 @@
+<script>
+
 let age = window.prompt("Ënter your age : ", 14);
 let maxAge = window.prompt("You will live until the ripe old age of : ", "100");
 let numPerDay = window.prompt("Number of Snacks daily : ", 2);
@@ -12,3 +14,5 @@ if (sure) {
 else {
   window.alert("Please click run again");
 }
+
+</script>
