--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <ol>
       <li><a href="./public/Q1_1stGraded.html"> First Exercise </a> </li>
       <li><a href="./public/Q1_1NGMgValdriz.html"> First Non-Graded Exercise </a> </li>
+      <li><a href="./public/Q1_1NGMgValdriz2.html"> First Non-Graded Exercise </a> </li>
+      <li><a href="./public/Q1_1NGMgValdriz3.html"> First Non-Graded Exercise </a> </li>
    </nav>
   </section>
   <script src="script.js">
