--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <li><a href="./public/Q1_1NGMgValdriz3.html"> First Non-Graded Exercise </a> </li>
       <li><a href="./public/Q12GMgValdriz.html"> Second Graded Exercise </a> </li>
       <li><a href="./public/Q13GMgValdriz.html"> Third Graded Exercise </a> </li> 
+      <li><a href="./public/reflections.md"> Third Graded Exercise </a> </li> 
    </nav>
   </section>
   <script src="script.js">
